--- a/マイクラコマンド(初心者編).ipynb
+++ b/マイクラコマンド(初心者編).ipynb
@@ -3,7 +3,9 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "authorship_tag": "ABX9TyNBNkihuOwYcXNmS45RxqYW",
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -14,6 +16,16 @@
     }
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/faia1109/minecraft/blob/main/%E3%83%9E%E3%82%A4%E3%82%AF%E3%83%A9%E3%82%B3%E3%83%9E%E3%83%B3%E3%83%89(%E5%88%9D%E5%BF%83%E8%80%85%E7%B7%A8).ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "markdown",
       "source": [
